syntax = "proto3";

package hello;

option go_package = "./hellopb";

message HelloRequest {
    string name = 1;
    string lastName = 2;
}

message HelloReply {
    string message = 1;
}

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
}
